styles/main.css
/*****************************************
GENERAL
*****************************************/

.main-heading {
	text-align: center;
}

.nav-section {
	background-image: url("../assets/images/patternDarkGray.jpg");
	background-size: 50% auto;
	font-size: 2rem;
	padding: 6px 5px;
}

.nav-section span {
	
}

.menu-menu {
	padding: 5px;
	margin: 12px 0px;
}

#map {
	/*min-height: 40vh;*/
	height: 400px;
  width: 100%;
}

footer {
	padding-top: 10px;
}

/*****************************************
NAV
*****************************************/

img.main-logo {
	padding-top: 10px;
}

nav {
	max-height: 5vh;
}

.navbar-default {
	border: none;
	border-radius: 0px;
	text-align: center;
}

/*****************************************
FOOTER
*****************************************/



/*****************************************

*****************************************/



/*****************************************
FONTS & COLORS
*****************************************/

/*{ 
	--green: #8cc540;
	--orange: #f36321;
	--blue: #00abd4;
	--hotpink: #ee145c;
	--purple: #c53a94;
	--purplish-brown: #312f30;
	--heather-gray: #4c4c4e;
	--charcoal-grey: #404041;
	--light-gray: #eeefef;
	--silver: #d3d4d6;
	font-family: 'Open Sans', sans-serif;
	font-family: Trash-Hands;
}*/

@font-face {
  font-family: 'TrashHand';
  src: url('TrashHand-webfont.eot');
  src: url('TrashHand-webfont.eot?#iefix') format('embedded-opentype'),
       url('TrashHand-webfont.woff2') format('woff2'),
       url('TrashHand-webfont.woff') format('woff'),
       url('TrashHand-webfont.ttf') format('truetype'),
       url('TrashHand-webfont.svg#trashhandregular') format('svg');
  font-weight: normal;
  font-style: normal;
}
.trash-hands {
	font-family: 'TrashHand';
	font-size: 4.5rem;
}

.street-event, .order-now, .our-menu {
	font-family: 'Open Sans';
	color: #d3d4d6; /*silver*/ 
	
}

h1, h2, h3, h4, h5, h6 {
	color: #404041; /*charcoal-grey*/
}

p {
	color: #4c4c4e; /*heather-gray:*/
}

.navbar-default, footer, .navbar-form, .navbar-collapse {
	background-color: #312f30; /*purplish-brown:*/ 
}

.search-icon {
	display: inline-block;
	background-color: #c53a94; /*purple*/ 
	border-radius: 50%;
	padding: 5px;
}

.cart-icon {
	display: inline-block;
	background-color: #00abd4; /*blue*/
	border-radius: 50%;
	padding: 5px;
	overflow: visible;
}

.street-event {
	background-color: #00abd4; /*blue*/
}

.order-now {
	background-color: #f36321; /*orange*/
}

.our-menu {
	background-color: #c53a94; /*purple*/ 
}

.the-med>a {
	color: #ee145c; /*hotpink*/
}

.the-uk>a {
	color: #00abd4; /*blue*/
}

.the-south>a {
	color: #f36321; /*orange*/
}

.the-east>a {
	color: #8cc540; /*green*/
}

.the-car>a {
	color: #c53a94; /*purple*/ 
}

footer {
	height: 20vh;
	color: #eeefef; /*light-gray*/
	/*background-color: black;*/
}

/*****************************************

*****************************************/

